open_mx/log/build_2024-12-04_19-03-51/robot_omx/stderr.log
  File "/home/lucasb/OpenManipulatorXRoboticArmKinematics/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx/inv_kin_server.py", line 57
    print('\n\n\nGripper closed was called\n\n\n\n\')
          ^
SyntaxError: unterminated string literal (detected at line 57)

Sorry: IndentationError: expected an indented block after function definition on line 38 (robot_node.py, line 42)
